--- a/analysis-chemistry-ar/script/analysis-pilot.Rmd
+++ b/analysis-chemistry-ar/script/analysis-pilot.Rmd
@@ -25,4 +25,22 @@ source(file = "./script/util.R")
 library(colorspace)
 library(irr)
 library(boot)
+library(xlsx)
 ```
+
+```{r}
+pre <- read.xlsx("./data/pre.xlsx", sheetIndex = 1)
+post <- read.xlsx("./data/post.xlsx", sheetIndex = 1)
+df <- rbind(pre, post)
+```
+
+```{r}
+na.omit(df) %>% 
+  ggplot(aes(x="", y = val, color= type)) +
+    xlab("Probability expressions") + ylab("percentage drawn")+
+    ggtitle("95% CI for mean")+
+    stat_summary(fun.data = "mean_cl_boot", colour = type, size = 0.5, position = position_nudge(x=0.00, y=0), alpha=1) +
+  coord_flip() +
+    facet_wrap(. ~ description)
+```
+
