--- a/analysis-202211/script/analysis.Rmd
+++ b/analysis-202211/script/analysis.Rmd
@@ -78,7 +78,36 @@ df %>%
     facet_wrap(.~question)
 ```
 
+```{r}
+# t.test(df$groundtruth2, conf.level = 0.95)
+# t.test(filter(df, question == 'pre_1', ques == 'pre_1')$val, conf.level = 0.95)
 
+library(boot)
+library(effsize)
+
+compute_ci = function (qname, c1, c2) {
+  #result = data.frame(qname=qname, t=c(), W=c(), d=c())
+#  filter(df, question == )
+  t = t.test(
+    pre_1_c,
+    pre_1_h,
+    conf.level=.95
+  )
+  
+  c = cohen.d(pre_1_c, pre_1_h, paired=FALSE)
+
+  W = wilcox.test(x=pre_1_c, y=pre_1_h, na.rm=TRUE, paired=FALSE, exact=FALSE, conf.int=TRUE)
+
+  result = data.frame(qname=c(qname), t=c(t$p.value), W=c(W[1]$statistic), d=c(c[3]$estimate))
+  return(result)
+}
+
+pre_1_c <- filter(df, question == 'post_5', study_type == 'control')$val
+pre_1_h <- filter(df, question == 'post_5', study_type == 'hololens')$val
+
+compute_ci("PRE1", pre_1_c, pre_1_h)
+
+```
 
 
 
