--- a/analysis-202211/script/analysis.Rmd
+++ b/analysis-202211/script/analysis.Rmd
@@ -37,7 +37,7 @@ library(boot)
 library(effsize)
 
 # ggplot theme
-theme_set(theme_light())
+theme_set(theme_bw())
 ```
 
 ```{r}
@@ -120,21 +120,50 @@ df %>% filter(question == "post_2" | question == "post_5") %>%
   ylim(1,5) +
   ggtitle("95% CI for mean")+
   stat_summary(fun.data = "mean_cl_boot", size = 0.5, position = position_dodge(0.2), alpha=1) +
-  scale_color_manual(values = c('#fc8d62', '#8da0cb'))
+  scale_color_manual(values = c('#fc8d62', '#8da0cb')) +
+  coord_flip()
 
 ```
 
 ```{r}
-fig_ci <- function(qqq) {
-  # p <- df %>% filter(question == "post_3" | question == "post_4") %>% 
-  p <- df %>% filter(question %in% qqq) %>%
-    ggplot(aes(x=question, y = val, color= study_type)) +
-    xlab("") + ylab("mean answer scale")+
-    ylim(1,5) +
-    ggtitle("95% CI for mean")+
-    stat_summary(fun.data = "mean_cl_boot", size = 0.5, position = position_dodge(0.2), alpha=1) +
-    scale_color_manual(values = c('#fc8d62', '#8da0cb'))
 
+fig_ci <- function(questions) {
+  diffs = ""
+
+  for (qname in questions) {
+    valc = filter(df, question == qname, study_type == 'control')$val
+    valh = filter(df, question == qname, study_type == 'hololens')$val
+    t = t.test(
+      valh,
+      valc,
+      conf.level=.95
+    )
+    
+    d = cohen.d(valh, valc, paired=FALSE)
+    W = wilcox.test(x=valh, y=valc, na.rm=TRUE, paired=FALSE, exact=FALSE, conf.int=TRUE)
+
+    diffs = paste(diffs, 
+              qname,
+              ": ",
+              "p = ", 
+              signif(t$p.value, digits = 4), 
+              ", W = ", 
+              signif(W[1]$statistic, digits = 4), 
+              ", d = ", 
+              signif(d[3]$estimate, digits = 4), 
+              "\n",
+              sep = "")
+  }
+
+  
+  p <- df %>% filter(question %in% questions) %>%
+    ggplot(aes(x=question, y = val, color= study_type)) +
+    xlab("") + ylab("")+
+    ylim(1,5) +
+    ggtitle("", subtitle = diffs) +
+    stat_summary(fun.data = "mean_cl_boot", size = 0.5, position = position_dodge(0.2), alpha=1) +
+    scale_color_manual(values = c('#fc8d62', '#8da0cb')) +
+    coord_flip()
   return (p)
 }
 
@@ -143,10 +172,17 @@ fig_ci <- function(qqq) {
 
 
 ```{r}
-fig_ci(c('post_1'))
-fig_ci(c('post_2', 'post_5'))
-fig_ci(c('post_3', 'post_4'))
-fig_ci(c('post_6', 'post_7'))
+fig_ci(c('post_1')) +
+  ggtitle("Willingness to integrate AR")
+
+fig_ci(c('post_2', 'post_5')) +
+  ggtitle("Learning experience")
+
+fig_ci(c('post_3', 'post_4')) +
+  ggtitle("Ability to recall procedures and parts")
+
+fig_ci(c('post_6', 'post_7')) +
+  ggtitle("Building experience")
 ```
 
 
