--- a/analysis-202211/script/analysis.Rmd
+++ b/analysis-202211/script/analysis.Rmd
@@ -45,11 +45,18 @@ theme_set(theme_bw())
 pre <- read_excel("../data/data.xlsx", sheet = "Pre")
 post <- read_excel("../data/data.xlsx", sheet = "Post")
 
-# removind entries from participant # 20 (didn't participate because minor)
+# removing entries from participant # 20 (didn't participate because minor)
 pre <- subset(pre, id!=20)
 post <- subset(post, id!=20)
 
-pre2 <- subset(pre, select = -c(pre_2)) # pre questionnaires without the bolumn for pre_2 question
+pre2 <- subset(pre, select = -c(pre_2)) # pre questionnaires without the column for pre_2 question
+
+# post question 7 reverse scale
+
+post$post_7 = 6 - post$post_7
+
+
+
 ```
 
 ```{r}
@@ -167,7 +174,7 @@ fig_ci <- function(questions) {
     mean_c = dd[1, "mean_c"]
     mean_h = dd[1, "mean_h"]
     
-    diffs = paste(diffs, 
+    diffs = paste(
               q_name,
               ": ",
               "W = ",
@@ -178,9 +185,10 @@ fig_ci <- function(questions) {
               signif(d, digits = 4),
               "~[",
               signif(d_low, digits = 4),
-              ",",
+              ", ",
               signif(d_high, digits = 4),
-              "]\n",
+              "]\n", 
+              diffs,
               sep = "")
     
     # valc = filter(df, question == qname, study_type == 'control')$val
@@ -220,9 +228,13 @@ fig_ci <- function(questions) {
     return(v)
   }
   p <- df %>% filter(question %in% questions) %>%
-    ggplot(aes(x=question, y = val, color= study_type)) +
+    ggplot(aes(x=factor(question, level=questions), y = val, color= study_type)) +
+    # ggplot(aes(x=question, y = val, color= study_type)) +
+    # scale_y_continuous(labels=as.character(val),breaks=y) +
+    scale_y_continuous(labels=c(1:6), breaks = c(1:6), limits = c(1,6)) +
+
     xlab("") + ylab("")+
-    ylim(1,6) +
+    # ylim(1,6) +
     ggtitle("", subtitle = diffs) +
     stat_summary(fun.data = "mean_cl_boot", size = 0.5, position = position_dodge(0.8), alpha=1 ) +
     # stat_summary(size = 5, position = position_dodge(1), alpha=1, geom = "text", aes(label=questions)) +
@@ -234,25 +246,28 @@ fig_ci <- function(questions) {
 }
 
 
-fig_ci(c('post_1')) +
-  ggtitle("Willingness to Integrate AR")
-ggsave("../output/fig/post-1.pdf", width = 5, height = 2, units = "in")
+```
 
-fig_ci(c('post_2', 'post_5')) +
-  ggtitle("Learning Experience")
-ggsave("../output/fig/post-2-5.pdf", width = 5, height = 2, units = "in")
+```{r}
+fig_ci(c('post_1')) 
+  # ggtitle("Willingness to Integrate AR")
+ggsave("../output/fig/post-1.png", width = 5, height = 2, units = "in")
 
-fig_ci(c('post_3', 'post_4')) +
-  ggtitle("Ability to Recall Procedures and Parts")
-ggsave("../output/fig/post-3-4.pdf", width = 5, height = 2, units = "in")
+fig_ci(c('post_5', 'post_2')) 
+  # ggtitle("Learning Experience")
+ggsave("../output/fig/post-2-5.png", width = 5, height = 2, units = "in")
 
-fig_ci(c('post_6', 'post_7')) +
-  ggtitle("Building Experience")
-ggsave("../output/fig/post-6-7.pdf", width = 5, height = 2, units = "in")
+fig_ci(c('post_4', 'post_3'))
+  # ggtitle("Ability to Recall Procedures and Parts")
+ggsave("../output/fig/post-3-4.png", width = 5, height = 2, units = "in")
 
-fig_ci(c('post_8')) +
-  ggtitle("Overall Experience")
-ggsave("../output/fig/post-8.pdf", width = 5, height = 2, units = "in")
+fig_ci(c('post_7', 'post_6')) 
+  # ggtitle("Building Experience")
+ggsave("../output/fig/post-6-7.png", width = 5, height = 2, units = "in")
+
+fig_ci(c('post_8'))
+  # ggtitle("Overall Experience")
+ggsave("../output/fig/post-8.png", width = 5, height = 2, units = "in")
 
 ```
 
